<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.luisro00005513.crossoversports.Fragments.FragmentCreate.FragmentCreatePlayers"
    android:layout_gravity="center"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@color/blanco">

    <LinearLayout
        android:id="@+id/create_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#fff"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blanco"
            android:gravity="center">
            <ImageView
                android:id="@+id/create_playeravatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_player_avatar"
                android:background="@color/secondaryLightColor"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingTop="8dp"/>
        </LinearLayout>

        <TextView
            android:paddingTop="8dp"
            android:id="@+id/create_playername_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_playername"
            android:gravity="center"/>
        <EditText
            android:id="@+id/player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>
        <TextView
            android:id="@+id/create_playerknown_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_shownname"
            android:gravity="center"/>
        <EditText
            android:id="@+id/player_alias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_payerbirth"
            android:gravity="center"/>
        <EditText
            android:id="@+id/player_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_player_country"
            android:gravity="center"/>
        <EditText
            android:id="@+id/player_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Info extra"
            android:gravity="center"/>
        <EditText
            android:id="@+id/player_extra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>
        <Button
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_addplayer"
            android:background="@color/secondaryDarkColor"
            android:padding="16dp"
            android:shadowColor="@color/primaryDarkColor"
            android:textColor="@color/primaryTextColor"
            android:textColorHighlight="@color/secondaryLightColor"/>

    </LinearLayout>


</ScrollView>
